--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
-html, body{
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+html, body {
   font-family: 'Open Sans', sans-serif;
   height: 100vh;
 }
+
 #app {
   font-family: 'Open Sans', sans-serif;
   /* -webkit-font-smoothing: antialiased;
@@ -13,3 +13,4 @@ html, body{
   margin-top: 60px;
   /* max-height:100vh; */
 }
+/*# sourceMappingURL=index.css.map */
