--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,14 +2,72 @@
 
 html, body{
   font-family: 'Open Sans', sans-serif;
-  height: 100vh;
+  //max-height: 50vh;
 }
 #app {
   font-family: 'Open Sans', sans-serif;
-  /* -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50; */
-  margin-top: 60px;
-  /* max-height:100vh; */
+  color: #2c3e50;
+  max-height: 100vh;
+}
+.title{
+  position: absolute;
+  padding: 20px;
+  text-align: left;
+  #information{
+    width: 1.5rem;
+  }
+}
+#helpers{
+  position: relative;
+}
+#subtitle{
+  position: absolute;
+  width: 250px;
+  border: 0.2px solid rgba(0,0,0,0.2);
+  height: 330px;
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  padding: 15px 15px 15px 15px;
+  right: 10px;
+  bottom: 10px;
+  svg{
+    height: 300px;
+  }
+}
+.reference-box {
+  z-index: 300;
+  position: absolute;
+  width: 400px;
+  border: 0.2px solid rgba(0,0,0,0.2);
+  height: 150px;
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  padding: 10px 15px 15px 15px;
+  bottom: 10px;
+  left: 10px;
+  display: block;
+  #collapse{
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 98%;
+  }
+  h1{
+    text-align: left;
+    font-weight: 700;
+    font-size: 0.9rem;
+    padding-bottom: 2%;
+  }
+  p {
+    font-size: 0.8rem;
+    text-align: justify;
+    text-justify: inter-word;
+  }
+}
+.map{
+  z-index: 100;
 }
