--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 
 html, body{
   font-family: 'Open Sans', sans-serif;
   //max-height: 50vh;
+  h1{
+    font-weight: 600;
+  }
 }
 #app {
   font-family: 'Open Sans', sans-serif;
