--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,9 @@ html, body{
   position: absolute;
   padding: 20px;
   text-align: left;
+  background-color: white;
+  border-radius: 0px 5px 5px 0px;
+  z-index: 1000;
   #information{
     width: 1.5rem;
   }
@@ -74,3 +77,16 @@ html, body{
 .map{
   z-index: 100;
 }
+
+@media only screen and (max-width: 768px) {
+  .title{
+    padding: 2px;
+    #information{
+      width: 1rem;
+    }
+  }
+  h1{
+    font-size: 1rem!important;
+  }
+}
+
