--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,7 +31,7 @@ html, body{
 }
 #subtitle{
   position: absolute;
-  width: 250px;
+  width: 260px;
   border: 0.2px solid rgba(0,0,0,0.2);
   height: 330px;
   background-color: white;
@@ -40,8 +40,16 @@ html, body{
   padding: 15px 15px 15px 15px;
   right: 10px;
   bottom: 10px;
+  display: block;
   svg{
     height: 300px;
+  }
+  #minimize-subtitle{
+    display: flex;
+    justify-content: flex-start;
+    position: absolute;
+    color: black;
+    bottom: 45%;
   }
 }
 .reference-box {
@@ -73,9 +81,46 @@ html, body{
     text-align: justify;
     text-justify: inter-word;
   }
+  .toggle-btn{
+    color: black;
+  }
+}
+
+.expand-icon-reference{
+  border-radius: 3rem;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  position: absolute;
+  bottom: 5px;
+  padding: 10px;
+  left: 10px;
+  display: block;
+  background-color: white;
+  .toggle-btn{
+    color: black;
+    #collapse{
+      height: 100%;
+      width: 40px;
+    }
+  }
+}
+
+.expand-icon-subtitle{
+  border-radius: 3rem;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  position: absolute;
+  bottom: 5px;
+  padding: 10px;
+  right: 10px;
+  display: block;
+  background-color: white;
+  .toggle-btn{
+    color: black;
+    #information{
+      height: 100%;
+      width: 40px;
+    }
+  }
 }
 .map{
   z-index: 100;
 }
-
-
